[gd_scene load_steps=3 format=3 uid="uid://b0y0u35to3vvj"]

[ext_resource type="Script" uid="uid://kwpet23grxf8" path="res://scenes/portal_to_level_one_1.gd" id="1_bgsvv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aei0u"]
size = Vector2(56.5, 82.5)

[node name="PortalToLevelOne1" type="Area2D"]
collision_mask = 3
script = ExtResource("1_bgsvv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_aei0u")

[node name="EnterTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="EnterTimer" to="." method="_on_enter_timer_timeout"]
